# StudyEnglishBot

./: .env  .env.example  .gitignore  Dockerfile  Pipfile  README.md  alembic.ini  bot.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  topics_all.py
FSMstates/: __init__.py
bot/: main.py
bot/FSMstates/: states.py
bot/bot_dialogs/: __init__.py  books.py  common.py  exercise.py  feedback.py  learn_words.py  notifications.py  rating.py  start.py  usage.py
bot/bot_dialogs/exercise/: __init__.py  exercise.py
bot/config_data/: config.py
bot/db/: __init__.py  api.py  models.py
bot/db/migrations/: env.py
bot/db/migrations/versions/: 2025_03_08_1001-b72bcd0d611d_updated_models_migration.py  2025_03_08_1003-66509284c159_updated_models_migration.py  2025_03_08_1044-c3c3fb958409_default_val_generations_to_users_id.py  2025_03_12_1114-c1912f8bf679_1_migration.py
bot/db/models/: answer.py  base.py  category.py  level.py  question.py  subcategory.py  user.py
bot/handlers/: __init__.py  base_handlers.py  handlers.py
bot/handlers/inline_kb_callbacks/: callback_factory.py
bot/keyboards/inline_keyboards/: inline_kb.py
bot/middlewares/: track_all_users.py
bot/routers/commands/: base_commands.py
bot/text_templates/: base_commands.py  base_text_templates.py  inline_buttons.py
bot/texts/: __init__.py
handlers/: handlers.py
keyboards/: __init__.py  keyboard.py  keyboard_old.py  menu_button.py
text_templates/: base_text_templates.py
texts/: topics_easy.py  topics_hard.py  topics_medium.py
(+3 files in other folders)
