[project]
name = "studyenglishbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "aiogram-dialog>=2.3.1",
    "aiogram>=3.17.0",
    "pydantic-settings>=2.7.1",
    "sqlalchemy[asyncio]==2.0.30",
    "psycopg[binary]==3.1.19",
    "alembic>=1.15.1",
]
